🐛fix(*): items not visually hidden on mobile devices

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -17,6 +17,12 @@
   }
 }
 
+.logo {
+  & .logoText {
+    text-decoration: none;
+  }
+}
+
 .menu {
   @media (--mediaMobile) {
     display: none;
