--- a/src/layouts/Home/Project.module.css
+++ b/src/layouts/Home/Project.module.css
@@ -13,10 +13,10 @@
   }
 }
 
-& .image {
+.image {
   position: relative;
-  max-width: var(--maxWidthS);
-  min-width: var(--minWidthM);
+  max-width: 56rem;
+  min-width: 40rem;
 
   @media (--mediaTablet) {
     min-width: 100%;
